Name:         logiku
Version:      0.0.1
Synopsis:     Prolog interpreter on a cont monad with web interface
Description:  Prolog interpreter on a cont monad with web interface
Category:     Language, Math, Web
Author:       Makoto Nishiura
Maintainer:   Makoto Nishiura <nishiuramakoto@gmail.com>
License:      GPL-3
cabal-version: >= 1.8
build-type:    Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: .
                  , app
                  , prolog-fd/src
                  , prolog-fd/unification-fd-0.10.0.1/src
                  , mylogict
                  , my-CC-delcont-cxe-0.1.0.2

    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Model
                     Settings
                     Settings.StaticFiles
                     Handler.Common
                     Handler.OldHome
                     Handler.Comment
                     -- My additions
                     CCGraph
                     SideMenu
                     Database
                     DBFS
                     Constructors
                     Authentication
                     Form
                     User
                     Prolog
                     Show
                     ShowText
                     Breadcrumb
                     Handler.Home
                     Handler.Goal
                     Handler.Program
                     Handler.Blog
                     Handler.UserProfile
                     Handler.Base
                     Handler.PrologTest
                     Handler.PrologProgram
                     -- Handler.PrologResolver
                     LogicT.LogicT
                     LogicT.SRReifT
                     --
                     Inquire
                     Language.Prolog2
                     Language.Prolog2.IO
                     Language.Prolog2.Database
                     Language.Prolog2.Builtins
                     Language.Prolog2.Types
                     Language.Prolog2.Parser
                     Language.Prolog2.InterpreterCommon
                     Language.Prolog2.Interpreter
                     Language.Prolog2.InterpreterIO
                     Language.Prolog2.Syntax
                     Language.Prolog2.NamedGraph
                     Text.Parsec.PrologExpr

                     Control.Monad.CC.CCCxe
                     Control.Monad.State.UnificationExtras
                     Control.Monad.MaybeK
                     Control.Monad.EitherK
                     Control.Unification
                     Control.Unification.STVar
                     Control.Unification.Types
                     Control.Unification.Ranked
                     Control.Unification.IntVar
                     Control.Unification.Ranked.STVar
                     Control.Unification.Ranked.IntVar
                     Data.Functor.Fixedpoint

    if flag(dev) || flag(library-only)
        cpp-options:   -DYESOD -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        cpp-options:   -DYESOD
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                MultiParamTypeClasses
                -- Work around for compiling CCCxe
--                TypeFamilies
--                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards
                -- my additions
                CPP
                PatternGuards
                KindSignatures
                ExistentialQuantification
                RankNTypes
                ImpredicativeTypes
                ScopedTypeVariables

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.1      && < 1.5
                 , yesod-core                    >= 1.4.17     && < 1.5
              --   , yesod-core                    >= 1.4.9     && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0.3    && < 1.6
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.0        && < 2.3
                 , persistent-postgresql         >= 2.1.1      && < 2.3
                 , persistent-template           >= 2.0        && < 2.3
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 1.1
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.3
                 , data-default
                 , aeson                         >= 0.6        && < 0.11
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.5
                 , wai-logger                    >= 2.2        && < 2.3
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time
                 , case-insensitive
                 , wai
                 -- My additions
                 -- , my-CC-delcont-cxe
                 -- , CC-delcont-cxe
                 , mono-traversable
                 , blaze-markup
--                 , mtl              >=2.1.3.1
                 , mtl              >=2.2.1
                 , syb              >= 0.3
                 , parsec           >= 3.1.1
                 , template-haskell
                 , th-lift          >= 0.5.3
                 , transformers     >= 0.2.2.0
                 , exceptions
                 , warp-tls
                 , list-extras      >= 0.4.1.4
                 , logict
                 , esqueleto        >= 2.4.3
                 , either           >= 4.4.1
                 , fgl                >= 5.5.2.3
executable         logiku
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, logiku

    ghc-options:       -threaded -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall
                       -- -fno-code

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    other-modules: TestImport

    build-depends: base
                 , logiku
                 , yesod-test >= 1.5.0.1 && < 1.6
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , shakespeare
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
                 , aeson
                 , esqueleto
                 , yesod-persistent >= 1.4.0.3
                 , time  >= 1.5.0.1
                 , text  >= 1.2.2.0
                 , mtl   >= 2.2.1
                 , HUnit >= 1.3.1.1
                 , containers >=0.5.6.2
                 , wai >= 3.2.0
                 , hspec-core >= 2.2.2
                 , QuickCheck >= 2.8.1
                 , bytestring >= 0.10.6.0
                 , wai-extra  >= 3.0.14
                 , xml-conduit >= 1.3.3.1
                 , http-types  >= 0.9
                 , yesod-auth  >= 1.4.12
-- library
--         hs-source-dirs: CC-delcont-cxe-0.1.0.2
--         exposed-modules:Control.Monad.CC.CCCxe
--         build-depends: base >= 3 && <5, mtl
